<resources>
    <string name="app_name">Timer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="library">Library</string>
    <string name="playlist">Playlist</string>
    <string name="playqueue">Queue</string>
    <string name="now_playing">NowPlaying</string>
    <string name="about">about</string>
    <string name="feedback">feadback</string>
    <string name="track">TRACK</string>
    <string name="sort">Sort</string>
    <string name="album">ALBUM</string>
    <string name="artist">ARTIST</string>
    <string name="quit">quit</string>
</resources>
